--- a/src/Makefile
+++ b/src/Makefile
@@ -15,6 +15,7 @@ clean:
 	rm atc lex.yy.* parser.tab.*
 
 test: atc
-	echo 'AT_CHECK () AT_SETUP () AT_DATA () AT_CLEANUP AT_INIT () m4_include ()' | ./atc
+	#echo 'AT_CHECK () AT_SETUP () AT_DATA () AT_CLEANUP AT_INIT () m4_include ()' | ./atc
+	echo 'AT_DATA ([hello], [world])' | ./atc
 
 .PHONY: clean test
