--- a/src/Makefile
+++ b/src/Makefile
@@ -2,11 +2,14 @@ CC=gcc
 
 all: atc
 
-atc: atc.c tree.h lex.yy.c parser.tab.c
-	$(CC) -o atc lex.yy.c parser.tab.c atc.c
+atc: atc.c tree.o lex.yy.c parser.tab.c
+	$(CC) -o atc tree.o lex.yy.c parser.tab.c atc.c
 
 lex.yy.c: scanner.l
 	flex scanner.l
+
+tree: tree.c tree.h
+	$(CC) -c tree.c
 
 parser.tab.c: parser.y tree.h
 	bison -d parser.y
@@ -15,7 +18,6 @@ clean:
 	rm atc lex.yy.* parser.tab.*
 
 test: atc
-	#echo 'AT_CHECK () AT_SETUP () AT_DATA () AT_CLEANUP AT_INIT () m4_include ()' | ./atc
-	echo 'AT_DATA ([hello], [world])' | ./atc
+	echo 'AT_DATA ([hello], [world]) AT_SETUP([test])' | ./atc
 
 .PHONY: clean test
